# CodeSamples

./: .gitmodules
arduino/servo_control/: DATA.txt
c/GettingAMemAV/: test.c
c/TimeEx/: timeex.c
c/TimeSpan/: timespan.c
c/UDPClient/: main.c
c/UDPServer/: main.c
c/YoutubeSearch/: README.1st  build.sh  out.txt  setup.sh  simple  simple.c  ytsearch.c
c/ai/: notes.txt
c/bluetooth-scan/: build.sh  main.c
c/discid/: build.sh  main.c
c/gmail-calendar/: .gitignore  CMakeLists.txt  README.md  build.sh
c/gmail-calendar/docs/: google-calendar.md
c/gmail-calendar/inc/: calendar.h  http_helper.h  loopback.h  oauth.h  util.h
c/gmail-calendar/src/: calendar.c  http_helper.c  loopback.c  main.c  oauth.c  util.c
c/html_parsing_myhtml/: build.sh
c/list_network_interfaces/: list_netifs.c
c/mbedtls/adu_jws/: CMakeLists.txt  main.c  readme.md  (+1 more)
c/musicbrainz/: build.sh  main.c
c/mysql/: build.sh  main.c
c/object_detection/: NOTES.txt
c/openssl/: build.sh  clean.sh  client.c  run-client.sh  run-server.sh  server.c
c/openssl_more/: build.sh  gen_certs.sh  server_blocking.c  test.sh
c/popen/: build.sh  main.c
c/redefine_macro/: main.c
c/sound_recoder_alsa/: README  build.sh  main.c  wav.c  wav.h
c/sqllite/: .gitignore  CMakeLists.txt  README.md  main.c
c/utils/: CMakeLists.txt
c/utils/inc/: list.h  logging.h  result.h
c/utils/src/: list.c  logging.c
c/utils/tests/: CMakeLists.txt
c/utils/tests/list_tests/: CMakeLists.txt  main.c
c/video_capture_v4l2/: build.sh  capture.c  capture.sh
c/webserver_libmicrohttpd/: README.1st  build-dynamic.sh  build-static.sh  clean.sh  main.c  prepare.sh
csharp/AzureBlobStorage/: AzureBlobStorage.sln
csharp/AzureFileStorage/: AzureFileStorage.sln
csharp/AzureKeyVaultManager/: AzureKeyVaultManager.sln
csharp/DragAndDrop1/: DragAndDrop.sln
csharp/DynamicAssemblyTest01/: DynamicAssemblyTest01.sln
csharp/FileCompression/: FileCompression.sln
csharp/GitHubAddComment/: GitHubAddComment.sln
csharp/GitHubGetIssue/: GitHubGetIssue.sln
csharp/GitHubGetIssueComments/: GitHubGetIssueComments.sln
csharp/Imap/: Imap.sln
csharp/InstallTheDamnDriver/: InstallTheDamnDriver.csproj  InstallTheDamnDriver.sln  Program.cs
csharp/KeyVaultTestApp/: KeyVaultTestApp.sln
csharp/NetScan/: NetScan.sln
csharp/Sha256Hash/: Sha256Hash.sln
csharp/SmsOverSmtp/: SmsOverSmtp.sln
csharp/SpeechRecognitionTest01/: Program.cs  SpeechRecognitionTest01.csproj  SpeechRecognitionTest01.sln
csharp/SpeechRecognitionTest02/: Program.cs  SpeechRecognitionTest02.csproj  SpeechRecognitionTest02.sln
csharp/SpeechRecognititonTest03/: Form1.Designer.cs  Form1.cs  Program.cs  SpeechRecognititonTest03.csproj  SpeechRecognititonTest03.sln
csharp/SqlConnection/: SqlConnection.sln
csharp/UIAutomationTest01/: Program.cs  UIAutomationTest01.csproj  UIAutomationTest01.sln
csharp/User32MouseControlTest01/: Program.cs  User32MouseControlTest01.csproj  User32MouseControlTest01.sln
csharp/WebUIAutomation/: WebUIAutomation.sln
csharp/WpfTest01/: App.xaml  App.xaml.cs  CustomData.cs  MainWindow.xaml  MainWindow.xaml.cs  WpfTest01.csproj  WpfTest01.sln
csharp/YoutubeExplodeCmd/: YoutubeExplodeCmd.sln
csharp/tar/: tar.sln
rpi/servo_control_wiringPi/: build.sh  servo.c  servo2.c
rust/OAuth/: Cargo.toml
scripts/YoutubeSearchAndPlay/: search.html  ytsnp.sh
scripts/online_radio/: README
sql/: create_tables.sql  describe_table.sql  describe_table2.sql  drop_tables.sql  list_tables_in_database.sql  select_records_simple.sql
(+59 files in other folders)
